<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meds</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_meds_title">Add Medication</string>
    <string name="required_fields">* Required Fields</string>
    <string name="meds_info">Medication Information</string>
    <string name="medication">* Medication</string>
    <string name="reasons_for_taking">* Reason For Taking</string>
    <string name="how_many">* How Many</string>
    <string name="how_often">* How Often</string>
    <string name="take_med_as_needed">I take this medication as needed.</string>
    <string name="upload_photo"><u>Upload Photo</u></string>
    <string name="additional_info">Additional Information</string>
	<string name="quantity">Quantity</string>
    <string name="num_refills">Number of Refills</string>
    <string name="start_date">Start Date</string>
	<string name="end_date">End Date</string>
	<string name="special_instructions">Special Instructions</string>
	<string name="prescribing_doctor">Prescribing Doctor</string>
	<string name="pharmacy_where_filled">Pharmacy Where Filled</string>
	<string name="prescription_refill_reminders">Prescription Refill Reminders</string>
	<string name="refill_reminders">Refill Reminders</string>
	<string name="num_days">Select Number of Days</string>
	<string name="save">Save</string>
	
    
</resources>
