<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.meds.MainActivity" >

    <TextView
        style="@style/WhiteTitle"
        android:padding="@dimen/border"
        android:text="@string/add_meds_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_blue"
                android:orientation="vertical"
                android:padding="@dimen/border" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/required_fields"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />

                <TextView
                    style="@style/WhiteTitle"
                    android:layout_marginTop="@dimen/border"
                    android:text="@string/meds_info" />

                <EditText
                    style="@style/WhiteEditText"
                    android:hint="@string/medication" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/take_med_as_needed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/border" >

                    <ImageView
                        android:id="@+id/pills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/pills" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/pills"
                        android:background="@color/transparent"
                        android:text="@string/upload_photo"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_small" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/baby_blue"
                android:orientation="vertical"
                android:padding="@dimen/border" >

                <TextView
                    style="@style/BlackTitle"
                    android:layout_marginBottom="@dimen/border"
                    android:text="@string/additional_info" />

                <EditText
                    style="@style/WhiteEditText"
                    android:hint="@string/quantity" />

                <EditText
                    style="@style/WhiteEditText"
                    android:hint="@string/num_refills" />

                <TextView
                    style="@style/BlackTitle"
                    android:layout_marginBottom="@dimen/border"
                    android:layout_marginTop="@dimen/border"
                    android:text="@string/prescription_refill_reminders" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/border"
                    android:background="@color/white"
                    android:padding="@dimen/text_padding"
                    android:text="@string/refill_reminders" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/button_border"
                    android:background="@color/light_blue"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>